--- a/TesterBlazor/Components/_Imports.razor
+++ b/TesterBlazor/Components/_Imports.razor
@@ -23,4 +23,6 @@
 @using TesterProject.BusinessEntities
 @using TesterProject.BusinessEntities.Telegram
 @using TesterProject.BusinessEntities.InfoCredito
+@using TesterProject.BusinessEntities.Utils
 @using TesterProject.BusinessLogic.Interfaces.InfoCredito
+@using TesterProject.BusinessLogic.Interfaces.Utils 
