--- a/TesterBlazor/Components/Pages/TelegramTester.razor
+++ b/TesterBlazor/Components/Pages/TelegramTester.razor
@@ -14,9 +14,6 @@
 </div>
 <div class="input-group mb-3">
     <label>El bot al que nos estaremos conectando se llama</label>&nbsp;<a href="https://t.me/del_monte_bot" target="_blank">@@DelMonteTester</a>&nbsp;<label>y se podrá encontrar escaneando el siguiente código QR:</label>
-    <div class="input-group mb-3" style="margin-top: 30px;">
-        <img class="img-thumbnail rounded mx-auto d-block" width="30%" src="../src/del_monte_bot.png" />
-    </div>
 </div>
 
 <div class="input-group mb-3">
@@ -35,11 +32,11 @@
             </div>
             @if (IsServiceRunning)
             {
-                <span class="badge text-bg-success">@ServiceStatusMessage</span>
+                <span style="margin-top:10px" class="badge text-bg-success">@ServiceStatusMessage</span>
             }
             else
             {
-                <span class="badge text-bg-danger">@ServiceStatusMessage</span>
+                <span style="margin-top:10px" class="badge text-bg-danger">@ServiceStatusMessage</span>
             }
             <div style="display: flex; gap: 10px;margin-top: 10px">
                 <input class="form-control" type="text" style="flex: 2;" placeholder="Chat Id o nombre de usuario" @bind="UserNameToSend" />
@@ -59,6 +56,10 @@
                 </button>
             </div>
         </fieldset>
+        <img src="../src/del_monte_bot.png"
+             class="img-thumbnail rounded"
+             style="width: 200px; align-self: flex-start;"
+             alt="QR Bot" />
     </div>
     <div class="input-group mb-3" style="display: flex; gap: 20px;">
         <div style="flex: 1;">
@@ -76,7 +77,7 @@
     </div>
 </div>
 
-<div class="input-group-mb-2">
+<div class="input-group-mb-2" style="margin-bottom:20px">
     <h4> 📒 Consulta de datos</h4>
 
     <div class="card text-center" style="margin-bottom:20px">
