--- a/TesterBlazor/Components/_Imports.razor
+++ b/TesterBlazor/Components/_Imports.razor
@@ -12,6 +12,7 @@
 @using System.Diagnostics
 
 @using TesterBlazor
+@using TesterBlazor.Components.Shared
 @using TesterBlazor.Services
 @using TesterBlazor.Models
 @using TesterBlazor.Models.InfoCredito
